# netcdf-bench

./: CMakeLists.txt  README.md
scripts/: compile-cooley.sh  compile-eb.sh  compile-jk.sh  run-cooley.sh  run-eb.sh
src/: CMakeLists.txt  benchmark.c  benchmark.h  constants.h  debug.h  main.c  options.c  options.h  report.c  report.h  timer.c  timer.h  types.c  types.h
src/test/test_benchmark/: compile.sh  test_benchmark.c
